; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/dev/dtrace/extr_lockstat.c_lockstat_attach.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/dev/dtrace/extr_lockstat.c_lockstat_attach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [9 x i8] c"lockstat\00", align 1
@S_IFCHR = common dso_local global i32 0, align 4
@DDI_PSEUDO = common dso_local global i32 0, align 4
@DDI_FAILURE = common dso_local global i64 0, align 8
@lockstat_attr = common dso_local global i32 0, align 4
@DTRACE_PRIV_KERNEL = common dso_local global i32 0, align 4
@lockstat_pops = common dso_local global i32 0, align 4
@lockstat_id = common dso_local global i32 0, align 4
@dtrace_probe = common dso_local global i32 0, align 4
@lockstat_probe = common dso_local global i32 0, align 4
@DDI_SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @lockstat_attach to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lockstat_attach(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %4 = load i32*, i32** %3, align 8
  %5 = load i32, i32* @S_IFCHR, align 4
  %6 = load i32, i32* @DDI_PSEUDO, align 4
  %7 = call i64 @ddi_create_minor_node(i32* %4, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i32 %5, i32 0, i32 %6, i32 0)
  %8 = load i64, i64* @DDI_FAILURE, align 8
  %9 = icmp eq i64 %7, %8
  br i1 %9, label %14, label %10

10:                                               ; preds = %1
  %11 = load i32, i32* @DTRACE_PRIV_KERNEL, align 4
  %12 = call i64 @dtrace_register(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i32* @lockstat_attr, i32 %11, i32* null, i32* @lockstat_pops, i32* null, i32* @lockstat_id)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %19

14:                                               ; preds = %10, %1
  %15 = load i32*, i32** %3, align 8
  %16 = call i32 @ddi_remove_minor_node(i32* %15, i32* null)
  %17 = load i64, i64* @DDI_FAILURE, align 8
  %18 = trunc i64 %17 to i32
  store i32 %18, i32* %2, align 4
  br label %23

19:                                               ; preds = %10
  %20 = load i32, i32* @dtrace_probe, align 4
  store i32 %20, i32* @lockstat_probe, align 4
  %21 = call i32 (...) @membar_producer()
  %22 = load i32, i32* @DDI_SUCCESS, align 4
  store i32 %22, i32* %2, align 4
  br label %23

23:                                               ; preds = %19, %14
  %24 = load i32, i32* %2, align 4
  ret i32 %24
}

declare dso_local i64 @ddi_create_minor_node(i32*, i8*, i32, i32, i32, i32) #1

declare dso_local i64 @dtrace_register(i8*, i32*, i32, i32*, i32*, i32*, i32*) #1

declare dso_local i32 @ddi_remove_minor_node(i32*, i32*) #1

declare dso_local i32 @membar_producer(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
